[gd_scene load_steps=8 format=3 uid="uid://b7ghrwyk4rfix"]

[ext_resource type="Script" path="res://Scripts/Tower.gd" id="1_65sfs"]
[ext_resource type="ArrayMesh" uid="uid://buqu8kex8t7fx" path="res://Assets/Meshes/enemy_ufo_mesh.tres" id="2_jwe3w"]
[ext_resource type="Script" path="res://Scripts/Components/EnemyDetectionComponent.gd" id="2_uf7qf"]
[ext_resource type="Script" path="res://Scripts/Components/AttackComponent.gd" id="4_dp0r7"]
[ext_resource type="Script" path="res://Scripts/Components/AttackAnimationComponent.gd" id="5_lnp2y"]
[ext_resource type="Resource" uid="uid://cptrc2v10cv84" path="res://Resources/AttackAnimations/bullet_animation.tres" id="6_wx2m2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u0e4s"]
radius = 10.0

[node name="TowerToBe" type="Node3D" node_paths=PackedStringArray("enemy_detection", "attack_component")]
script = ExtResource("1_65sfs")
enemy_detection = NodePath("EnemyDetectionComponent")
attack_component = NodePath("AttackComponent")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_jwe3w")

[node name="EnemyDetectionComponent" type="Area3D" parent="." node_paths=PackedStringArray("collision")]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("2_uf7qf")
collision = NodePath("CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyDetectionComponent"]
shape = SubResource("CylinderShape3D_u0e4s")

[node name="AttackComponent" type="Node" parent="." node_paths=PackedStringArray("animation_component")]
script = ExtResource("4_dp0r7")
animation_component = NodePath("../AttackAnimationComponent")
attack_duration = 0.6

[node name="AttackAnimationComponent" type="Node" parent="."]
script = ExtResource("5_lnp2y")
animation_type = ExtResource("6_wx2m2")

[connection signal="area_entered" from="EnemyDetectionComponent" to="EnemyDetectionComponent" method="_on_area_entered"]
[connection signal="area_exited" from="EnemyDetectionComponent" to="EnemyDetectionComponent" method="_on_area_exited"]
